[package]
name = "libmanage"
version = "0.1.0-dev"
authors = ["Hentioe <me@bluerain.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "cookies", "json"] }
scraper = "0.11.0"
failure = "0.1.6"
lazy_static = "1.4.0"
regex = "1.3.3"
quick-js = "0.3.0"
url = "2.1.1"
encoding_rs = "0.8.22"
serde = "1.0.104"